--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 	</section>
 	<section id="contatos">
 		<form id="formulario">
-			<input type="" name="">
-			<input type="" name="">
-			<button></button>
+			<span>Nome:</span>
+			<input name="nome" placeholder="Seu nome">
+			<span>Mensagem:</span>
+			<textarea name="mensagem" placeholder="Sua mensagem"></textarea>
+			<button>Enviar</button>
 		</form>
 
 		<div id="detalhes">
