--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
 	</section>
 	<section id="cardapio">
 		<div id="cervejas">
-			dfgthy
+			cervejas
 		</div>
 		<div id="doses">
-			dfgthy
+			doses
 		</div>
 		<div id="caicarinhas">
-			dfgthy
+			caicarinhas
 		</div>
 		<div id="caipirinhas">
-			dfgthy
+			caipirinhas
 		</div>
 		<div id="batidas">
-			dfgthy
+			batidas
 		</div>
 		<div id="sucos">
-			dfgthy
+			sucos
 		</div>
 		<div id="sucos">
-			dfgthy
+			sucos
 		</div>
 		<div id="sucos">
-			dfgthy
+			sucos
 		</div>
 		<div id="sucos">
-			dfgthy
+			sucos
 		</div>
 		<div id="sucos">
-			dfgthy
+			sucos
 		</div>
 	</section>
 	<section id="map_section">
