--- a/index.html
+++ b/index.html
@@ -17,34 +17,94 @@
 	</section>
 	<section id="cardapio">
 		<div id="cervejas">
-			cervejas
+			<h1>cervejas</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="doses">
-			doses
+			<h1>doses</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="caicarinhas">
-			caicarinhas
+			<h1>caicarinhas</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="caipirinhas">
-			caipirinhas
+			<h1>caipirinhas</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="batidas">
-			batidas
+			<h1>batidas</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="sucos">
-			sucos
+			<h1>sucos</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="sucos">
-			sucos
+			<h1>sucos</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="sucos">
-			sucos
+			<h1>sucos</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="sucos">
-			sucos
+			<h1>sucos</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 		<div id="sucos">
-			sucos
+			<h1>sucos</h1>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+			<span>... e mais</span>
 		</div>
 	</section>
 	<section id="map_section">
@@ -62,29 +122,33 @@
 		<div id="detalhes">
 			<div>
 				<h1>ENDEREÇO E TELEFONES</h1>
-				<div>
+				<p>
 					Telefone: <br>
-					(13) 3427-1698
-				</div>
+					<span>(13) 3427-1698</span>
+				</p>
 
-				<div>
+				<p>
 					Endereço: <br>
-					Av. Pres. Vargas, 1054 - Centro, Itanhaém - SP
-				</div>
+					<span>Av. Pres. Vargas, 1054 - Centro, Itanhaém - SP</span>
+				</p>
 			</div>
 			<div>
 				<h1>HORÁRIO DE FUNCIONAMENTO</h1>
-				<div>
-					Seg. à seg. <br>
-					Das 09h às 21h
-				</div>
+				<p>
+					Sábado e Domingo <br>
+					<span>Das 09h às 21h</span>
+				</p>
+				<p>
+					Segunda à Sexta <br>
+					<span>Das 09h às 21h</span>
+				</p>
 			</div>
 			<div>
 				<h1>Siga a gente</h1>
-				<div>
+				<p>
 					face<br>
 					face
-				</div>
+				</p>
 			</div>
 		</div>
 	</section>
