--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		</div>
 	</section>
 	<section id="map_section">
-		<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1819.8272580430869!2d-46.782559129345216!3d-24.183846280019065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1598661405643!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1819.8272580430869!2d-46.782559129345216!3d-24.183846280019065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1598661405643!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border:0;"></iframe>
 	</section>
 	<section id="contatos">
 		<form id="formulario">
