--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img id="logo" src="logo">
+		<img id="logo" src="logo.png">
 		<a href="#quiosque">O Quiosque</a>
 		<a href="#cardapio">Cardápio</a>
 		<a href="#contatos">Contatos</a>
@@ -17,94 +17,135 @@
 	</section>
 	<section id="cardapio">
 		<div id="cervejas">
-			<h1>cervejas</h1>
+			<h1>Cervejas</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Skol</li>
+				<li>Brahma</li>
+				<li>Heineken</li>
+				<li>Itaipava</li>
+				<li>Petra</li>
+				<li>Amstel</li>
+				<li>Original</li>
+				<li>Skol Lata</li>
+				<li>Brahma-Zero</li>
+				<li>Malzbier</li>
+				<li>Heineken-Zero</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
 		<div id="doses">
-			<h1>doses</h1>
+			<h1>Doses</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Seleta</li>
+				<li>Tequila</li>
+				<li>Red Label</li>
+				<li>Velho Barreiro</li>
+				<li>51</li>
+				<li>São Francisco</li>
+				<li>Cynar</li>
+				<li>Martini</li>
+				<li>Saquê</li>
+				<li>Vinho Suave</li>
+				<li>Dreher</li>
+				<li>Rum/Domecq</li>
+				<li>Smirnoff</li>
+				<li>Campari</li>
+				<li>Whisky Passport</li>
+				<li>Gin</li>
 			</ul>
-			<span>... e mais</span>
-		</div>
-		<div id="caicarinhas">
-			<h1>caicarinhas</h1>
-			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
-			</ul>
-			<span>... e mais</span>
 		</div>
 		<div id="caipirinhas">
-			<h1>caipirinhas</h1>
+			<h1>Caipirinhas</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Vinho</li>
+				<li>Pinga</li>
+				<li>Gin</li>
+				<li>Smirnoff</li>
+				<li>Saquê</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
 		<div id="batidas">
-			<h1>batidas</h1>
+			<h1>Batidas</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Espanhola</li>
+				<li>Smirnoff</li>
+				<li>Saquê</li>
+				<li>Pinga</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
 		<div id="sucos">
-			<h1>sucos</h1>
+			<h1>Sucos</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Abacaxi</li>
+				<li>Limão</li>
+				<li>Maracujá</li>
+				<li>Acerola</li>
+				<li>Caju</li>
+				<li>Coco</li>
+				<li>Manga</li>
+				<li>Morango</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
-		<div id="sucos">
-			<h1>sucos</h1>
+		<div id="porcoes">
+			<h1>Porções</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Camarão</li>
+				<li>Mandioca Frita</li>
+				<li>Lula</li>
+				<li>Porquinho</li>
+				<li>Cação</li>
+				<li>Isca</li>
+				<li>Camarão Branco</li>
+				<li>Marisco ao Vinagrete</li>
+				<li>Manjuba</li>
+				<li>Caranguejo na Cerveja</li>
+				<li>Carne Seca/Mandioca</li>
+				<li>Calabresa Acebolada</li>
+				<li>Frango à Passarinho</li>
+				<li>Batata Frita</li>
+				<li>Polenta Frita</li>
+				<li>Mandioca Cremosa</li>
+				<li>Cebola Empanada</li>
+				<li>Salame</li>
+				<li>Palmito com Azeitonas</li>
+				<li>Bolinhos de Provolone</li>
+
 			</ul>
-			<span>... e mais</span>
 		</div>
-		<div id="sucos">
-			<h1>sucos</h1>
+		<div id="petiscos">
+			<h1>Petiscos</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Mini Kibe</li>
+				<li>Casquinha de Siri</li>
+				<li>Espeto de Cação</li>
+				<li>Espeto de Camarão</li>
+				<li>Bolinhos de Carne Seca</li>
+				<li>Bolinhos de Bacalhau</li>
+				<li>Bolinhos de Camarão</li>
+				<li>Pescada Inteira</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
-		<div id="sucos">
-			<h1>sucos</h1>
+		<div id="salgados">
+			<h1>Salgados</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Coxinha</li>
+				<li>Risoles</li>
+				<li>Empadas</li>
+				<li>Empada de Bacalhau</li>
+				<li>Empada de Palmito</li>
+				<li>Empada de Camarão</li>
+				<li>Kibe</li>
+				<li>Risoles de Queijo</li>
+				<li>Risoles de Camarão</li>
+				<li>Bolinho de Bacalhau</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
-		<div id="sucos">
-			<h1>sucos</h1>
+		<div id="refrescos">
+			<h1>Refrescos</h1>
 			<ul>
-				<li>Item 1</li>
-				<li>Item 2</li>
-				<li>Item 3</li>
+				<li>Refrigerantes</li>
+				<li>Coco Verde</li>
+				<li>Açaí</li>
 			</ul>
-			<span>... e mais</span>
 		</div>
 	</section>
 	<section id="map_section">
@@ -136,21 +177,22 @@
 				<h1>HORÁRIO DE FUNCIONAMENTO</h1>
 				<p>
 					Sábado e Domingo <br>
-					<span>Das 09h às 21h</span>
+					<span>Das 09h às 18h</span>
 				</p>
 				<p>
 					Segunda à Sexta <br>
-					<span>Das 09h às 21h</span>
+					<span>Das 10h às 18h</span>
 				</p>
 			</div>
 			<div>
 				<h1>Siga a gente</h1>
 				<p>
-					face<br>
-					face
+					<a href="https://www.facebook.com/QuiosqueVentania">▶ facebook</a><br>
+					<a href="https://www.facebook.com/QuiosqueVentania">▶ facebook</a>
 				</p>
 			</div>
 		</div>
 	</section>
+	<script src="js.js"></script>
 </body>
 </html>
