--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<a href="#contatos">Contatos</a>
 	</header>
 	<section id="quiosque">
-		blabla
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet condimentum finibus.</p>
+		<p>Mauris convallis dui magna, sit amet mattis nibh dapibus sit amet. Vivamus vestibulum elit erat, ut cursus magna iaculis vitae.</p>
+		<p>Proin at tristique lorem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+		<p>Cras laoreet elit in purus posuere suscipit. Praesent non massa finibus, imperdiet massa ac, posuere metus.</p>
 	</section>
 	<section id="cardapio">
 		<div id="cervejas">
@@ -177,18 +180,18 @@
 				<h1>HORÁRIO DE FUNCIONAMENTO</h1>
 				<p>
 					Sábado e Domingo <br>
-					<span>Das 09h às 18h</span>
+					<span>09h às 18h</span>
 				</p>
 				<p>
 					Segunda à Sexta <br>
-					<span>Das 10h às 18h</span>
+					<span>10h às 18h</span>
 				</p>
 			</div>
 			<div>
 				<h1>Siga a gente</h1>
 				<p>
-					<a href="https://www.facebook.com/QuiosqueVentania">▶ facebook</a><br>
-					<a href="https://www.facebook.com/QuiosqueVentania">▶ facebook</a>
+					<br>
+					<a href="https://www.facebook.com/QuiosqueVentania">facebook</a>
 				</p>
 			</div>
 		</div>
