fade in pra esconder imagem carregando

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</section>
 	<section id="cardapio">
 		<div id="cervejas">
+			<img src="cervejas.webp">
 			<h1>Cervejas</h1>
 			<ul>
 				<li>Skol</li>
@@ -36,6 +37,7 @@
 			</ul>
 		</div>
 		<div id="doses">
+			<img src="doses.webp">
 			<h1>Doses</h1>
 			<ul>
 				<li>Seleta</li>
@@ -57,6 +59,7 @@
 			</ul>
 		</div>
 		<div id="caipirinhas">
+			<img src="caipirinhas.webp">
 			<h1>Caipirinhas</h1>
 			<ul>
 				<li>Vinho</li>
@@ -67,6 +70,7 @@
 			</ul>
 		</div>
 		<div id="batidas">
+			<img src="batidas.webp">
 			<h1>Batidas</h1>
 			<ul>
 				<li>Espanhola</li>
@@ -76,6 +80,7 @@
 			</ul>
 		</div>
 		<div id="sucos">
+			<img src="sucos.webp">
 			<h1>Sucos</h1>
 			<ul>
 				<li>Abacaxi</li>
@@ -89,6 +94,7 @@
 			</ul>
 		</div>
 		<div id="porcoes">
+			<img src="porcoes.webp">
 			<h1>Porções</h1>
 			<ul>
 				<li>Camarão</li>
@@ -115,6 +121,7 @@
 			</ul>
 		</div>
 		<div id="petiscos">
+			<img src="petiscos.webp">
 			<h1>Petiscos</h1>
 			<ul>
 				<li>Mini Kibe</li>
@@ -128,6 +135,7 @@
 			</ul>
 		</div>
 		<div id="salgados">
+			<img src="salgados.webp">
 			<h1>Salgados</h1>
 			<ul>
 				<li>Coxinha</li>
@@ -143,6 +151,7 @@
 			</ul>
 		</div>
 		<div id="refrescos">
+			<img src="refrescos.webp">
 			<h1>Refrescos</h1>
 			<ul>
 				<li>Refrigerantes</li>
