--- a/index.html
+++ b/index.html
@@ -19,63 +19,69 @@
 		<p>Cras laoreet elit in purus posuere suscipit. Praesent non massa finibus, imperdiet massa ac, posuere metus.</p>
 	</section>
 	<section id="cardapio">
+		<div id="dinheiro">R$</div>
 		<div id="cervejas">
 			<img src="cervejas.webp">
 			<h1>Cervejas</h1>
 			<ul>
-				<li>Itaipava</li>
-				<li>Petra</li>
-				<li>Amstel</li>
-				<li>Brahma</li>
-				<li>Skol</li>
-				<li>Original</li>
-				<li>Heineken</li>
-				<li>Malzbier</li>
-				<li>Brahma-Zero</li>
-				<li>Heineken-Zero</li>
-				<li>Skol Lata</li>
+				<h2>600ml</h2>
+				<li><span>8,00</span><span>Itaipava</span></li>
+				<li><span>10,00</span><span>Petra</span></li>
+				<li><span>10,00</span><span>Amstel</span></li>
+				<li><span>10,00</span><span>Brahma</span></li>
+				<li><span>10,00</span><span>Skol</span></li>
+				<li><span>12,00</span><span>Original</span></li>
+				<li><span>15,00</span><span>Heineken</span></li>
+				<h2>Lata</h2>
+				<li><span>8,00</span><span>Malzbier</span></li>
+				<li><span>8,00</span><span>Brahma-Zero</span></li>
+				<li><span>8,00</span><span>Heineken-Zero</span></li>
+				<li><span>6,00</span><span>Skol Lata</span></li>
+				<h2>Outros</h2>
+				<li><span>8,00</span><span>Energético TNT</span></li>
+				<li><span>10,00</span><span>Smirnoff Ice</span></li>
 			</ul>
 		</div>
 		<div id="doses">
 			<img src="doses.webp">
 			<h1>Doses</h1>
 			<ul>
-				<li>Seleta</li>
-				<li>Tequila</li>
-				<li>Red Label</li>
-				<li>Velho Barreiro</li>
-				<li>São Francisco</li>
-				<li>Cynar</li>
-				<li>Martini</li>
-				<li>Saquê</li>
-				<li>Vinho Suave</li>
-				<li>Dreher</li>
-				<li>Rum/Domecq</li>
-				<li>Smirnoff</li>
-				<li>Campari</li>
-				<li>Whisky Passport</li>
-				<li>Gin</li>
+				<li><span>7,00</span><span>Velho Barreiro</span></li>
+				<li><span>8,00</span><span>Seleta</span></li>
+				<li><span>8,00</span><span>São Francisco</span></li>
+				<li><span>8,00</span><span>Cynar</span></li>
+				<li><span>8,00</span><span>Martini</span></li>
+				<li><span>8,00</span><span>Saquê</span></li>
+				<li><span>8,00</span><span>Vinho Suave</span></li>
+				<li><span>8,00</span><span>Dreher</span></li>
+				<li><span>10,00</span><span>Rum/Domecq</span></li>
+				<li><span>10,00</span><span>Smirnoff</span></li>
+				<li><span>13,00</span><span>Campari</span></li>
+				<li><span>12,00</span><span>Whisky Passport</span></li>
+				<li><span>20,00</span><span>Red Label</span></li>
+				<li><span>25,00</span><span>Tequila</span></li>
+				<li><span>15,00</span><span>Gin</span></li>
 			</ul>
 		</div>
 		<div id="caipirinhas">
 			<img src="caipirinhas.webp">
 			<h1>Caipirinhas</h1>
 			<ul>
-				<li>Vinho</li>
-				<li>Pinga</li>
-				<li>Gin</li>
-				<li>Smirnoff</li>
-				<li>Saquê</li>
+				<li><span>15,00</span><span>Pinga</span></li>
+				<li><span>15,00</span><span>Vinho</span></li>
+				<li><span>20,00</span><span>Smirnoff</span></li>
+				<li><span>17,00</span><span>Saquê</span></li>
+				<li><span>23,00</span><span>Gin</span></li>
 			</ul>
 		</div>
 		<div id="batidas">
 			<img src="batidas.webp">
 			<h1>Batidas</h1>
 			<ul>
-				<li>Espanhola</li>
-				<li>Smirnoff</li>
-				<li>Saquê</li>
-				<li>Pinga</li>
+				<li><span>8,00</span><span>Espanhola</span></li>
+				<li><span>8,00</span><span>Smirnoff</span></li>
+				<li><span>8,00</span><span>Saquê</span></li>
+				<li><span>8,00</span><span>Pinga</span></li>
 			</ul>
 		</div>
 		<div id="sucos">
@@ -105,7 +111,7 @@
 				<li>Camarão Branco</li>
 				<li>Marisco ao Vinagrete</li>
 				<li>Manjuba</li>
-				<li>Caranguejo na Cerveja</li>
+				<li><span>60,00</span><span>Caranguejo na Cerveja</span></li>
 				<br>
 				<li>Carne Seca/Mandioca</li>
 				<li>Calabresa Acebolada</li>
@@ -115,9 +121,8 @@
 				<li>Mandioca Cremosa</li>
 				<li>Cebola Empanada</li>
 				<li>Salame</li>
-				<li>Palmito com Azeitonas</li>
-				<li>Bolinhos de Provolone</li>
-
+				<li><span>60,00</span><span>Palmito com Azeitonas</span></li>
+				<li><span>60,00</span><span>Bolinhos de Provolone</span></li>
 			</ul>
 		</div>
 		<div id="petiscos">
@@ -128,7 +133,7 @@
 				<li>Casquinha de Siri</li>
 				<li>Espeto de Cação</li>
 				<li>Espeto de Camarão</li>
-				<li>Bolinhos de Carne Seca</li>
+				<li><span>8,00</span><span>Bolinhos de Carne Seca</span></li>
 				<li>Bolinhos de Bacalhau</li>
 				<li>Bolinhos de Camarão</li>
 				<li>Pescada Inteira</li>
@@ -147,14 +152,14 @@
 				<li>Kibe</li>
 				<li>Risoles de Queijo</li>
 				<li>Risoles de Camarão</li>
-				<li>Bolinho de Bacalhau</li>
+				<li><span>8,00</span><span>Bolinho de Bacalhau</span></li>
 			</ul>
 		</div>
 		<div id="refrescos">
 			<img src="refrescos.webp">
 			<h1>Refrescos</h1>
 			<ul>
-				<li>Refrigerantes</li>
+				<li><span>5,00</span><span>Refrigerantes</span></li>
 				<li>Coco Verde</li>
 				<li>Açaí</li>
 			</ul>
