--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<p>Cras laoreet elit in purus posuere suscipit. Praesent non massa finibus, imperdiet massa ac, posuere metus.</p>
 	</section>
 	<section id="cardapio">
-		<div id="dinheiro">R$</div>
+		<div id="dinheiro" onclick="clicou_dinheiro()">R$</div>
 		<div id="cervejas">
 			<img src="cervejas.webp">
 			<h1>Cervejas</h1>
@@ -33,10 +33,10 @@
 				<li><span>12,00</span><span>Original</span></li>
 				<li><span>15,00</span><span>Heineken</span></li>
 				<h2>Lata</h2>
-				<li><span>8,00</span><span>Malzbier</span></li>
-				<li><span>8,00</span><span>Brahma-Zero</span></li>
-				<li><span>8,00</span><span>Heineken-Zero</span></li>
 				<li><span>6,00</span><span>Skol Lata</span></li>
+				<li><span>8,00</span><span>Brahma-Zero</span></li>
+				<li><span>8,00</span><span>Malzbier</span></li>
+				<li><span>8,00</span><span>Heineken-Zero</span></li>
 				<h2>Outros</h2>
 				<li><span>8,00</span><span>Energético TNT</span></li>
 				<li><span>10,00</span><span>Smirnoff Ice</span></li>
@@ -88,14 +88,22 @@
 			<img src="sucos.webp">
 			<h1>Sucos</h1>
 			<ul>
-				<li>Abacaxi</li>
-				<li>Limão</li>
-				<li>Maracujá</li>
-				<li>Acerola</li>
-				<li>Caju</li>
-				<li>Coco</li>
-				<li>Manga</li>
-				<li>Morango</li>
+				<li><span>8,00</span><span>Com Água</span></li>
+				<li><span>9,00</span><span>Com Leite</span></li>
+				<div>
+					<h3>Sabores</h3>
+					<ul>
+						<li>Abacaxi</li>
+						<li>Abacaxi + Hortelã</li>
+						<li>Acerola + Laranja</li>
+						<li>Caju</li>
+						<li>Coco</li>
+						<li>Limão</li>
+						<li>Manga</li>
+						<li>Maracujá</li>
+						<li>Morango</li>
+					</ul>
+				</div>
 			</ul>
 		</div>
 		<div id="porcoes">
