--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 		<a href="#contatos">Contatos</a>
 	</header>
 	<section id="quiosque">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet condimentum finibus.</p>
-		<p>Mauris convallis dui magna, sit amet mattis nibh dapibus sit amet. Vivamus vestibulum elit erat, ut cursus magna iaculis vitae.</p>
-		<p>Proin at tristique lorem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-		<p>Cras laoreet elit in purus posuere suscipit. Praesent non massa finibus, imperdiet massa ac, posuere metus.</p>
+		<h1>Sobre o Quiosque Ventania</h1>
+		<p>Bem-vindo ao Quiosque Ventania, localizado na Praia do Centro em Itanhaém, São Paulo. Nossa missão é oferecer um ambiente acolhedor e descontraído, com pratos deliciosos de frutos do mar e bebidas refrescantes.</p>
+		<p>Culinária de Excelência: Pratos frescos e saborosos, incluindo camarões e peixes.</p>
+		<p>Ambiente Agradável: Atmosfera relaxante à beira-mar.</p>
+		<p>Garantimos altos padrões de higiene e segurança, com atendimento excepcional para tornar sua visita inesquecível.</p>
+		<p>Espero que goste!</p>
 	</section>
 	<section id="cardapio">
-		<div id="dinheiro" onclick="clicou_dinheiro()">R$</div>
 		<div id="cervejas">
 			<img src="cervejas.webp">
 			<h1>Cervejas</h1>
@@ -78,18 +79,18 @@
 			<img src="batidas.webp">
 			<h1>Batidas</h1>
 			<ul>
-				<li><span>8,00</span><span>Espanhola</span></li>
-				<li><span>8,00</span><span>Smirnoff</span></li>
-				<li><span>8,00</span><span>Saquê</span></li>
-				<li><span>8,00</span><span>Pinga</span></li>
+				<li><span>16,00</span><span>Espanhola</span></li>
+				<li><span>16,00</span><span>Pinga</span></li>
+				<li><span>21,00</span><span>Smirnoff</span></li>
+				<li><span>18,00</span><span>Saquê</span></li>
 			</ul>
 		</div>
 		<div id="sucos">
 			<img src="sucos.webp">
 			<h1>Sucos</h1>
 			<ul>
-				<li><span>8,00</span><span>Com Água</span></li>
-				<li><span>9,00</span><span>Com Leite</span></li>
+				<li><span>10,00</span><span>Com Água</span></li>
+				<li><span>12,00</span><span>Com Leite</span></li>
 				<div>
 					<h3>Sabores</h3>
 					<ul>
@@ -110,68 +111,72 @@
 			<img src="porcoes.webp">
 			<h1>Porções</h1>
 			<ul>
-				<li>Camarão</li>
-				<li>Mandioca Frita</li>
-				<li>Lula</li>
-				<li>Porquinho</li>
-				<li>Cação</li>
-				<li>Isca</li>
-				<li>Camarão Branco</li>
-				<li>Marisco ao Vinagrete</li>
-				<li>Manjuba</li>
-				<li><span>60,00</span><span>Caranguejo na Cerveja</span></li>
-				<br>
-				<li>Carne Seca/Mandioca</li>
-				<li>Calabresa Acebolada</li>
-				<li>Frango à Passarinho</li>
-				<li>Batata Frita</li>
-				<li>Polenta Frita</li>
-				<li>Mandioca Cremosa</li>
-				<li>Cebola Empanada</li>
-				<li>Salame</li>
-				<li><span>60,00</span><span>Palmito com Azeitonas</span></li>
-				<li><span>60,00</span><span>Bolinhos de Provolone</span></li>
+				<li><span>80,00</span><span>Carne Seca/Mandioca</span></li>
+				<li><span>45,00</span><span>Calabresa Acebolada</span></li>
+				<li><span>50,00</span><span>Frango à Passarinho</span></li>
+				<li><span>35,00</span><span>Batata Frita</span></li>
+				<li><span>35,00</span><span>Polenta Frita</span></li>
+				<li><span>35,00</span><span>Mandioca Frita</span></li>
+				<li><span>35,00</span><span>Mandioca Cremosa</span></li>
+				<li><span>40,00</span><span>Cebola Empanada</span></li>
+				<li><span>40,00</span><span>Salame</span></li>
+				<li><span>40,00</span><span>Palmito com Azeitonas</span></li>
+				<li><span>50,00</span><span>Bolinhos de Provolone</span></li>
+				<h2>Frutos do Mar</h2>
+				<li><span>60,00</span><span>Camarão</span></li>
+				<li><span>90,00</span><span>Camarão Branco</span></li>
+				<li><span>70,00</span><span>Lula</span></li>
+				<li><span>70,00</span><span>Porquinho</span></li>
+				<li><span>70,00</span><span>Cação</span></li>
+				<li><span>70,00</span><span>Isca</span></li>
+				<li><span>70,00</span><span>Marisco ao Vinagrete</span></li>
+				<li><span>60,00</span><span>Manjuba</span></li>
+				<li><span>50,00</span><span>Caranguejo na Cerveja</span></li>
 			</ul>
 		</div>
 		<div id="petiscos">
 			<img src="petiscos.webp">
 			<h1>Petiscos</h1>
 			<ul>
-				<li>Mini Kibe</li>
-				<li>Casquinha de Siri</li>
-				<li>Espeto de Cação</li>
-				<li>Espeto de Camarão</li>
-				<li><span>8,00</span><span>Bolinhos de Carne Seca</span></li>
-				<li>Bolinhos de Bacalhau</li>
-				<li>Bolinhos de Camarão</li>
-				<li>Pescada Inteira</li>
+				<li><span>60,00</span><span>Mini Kibe</span></li>
+				<li><span>60,00</span><span>Bolinhos de Carne Seca</span></li>
+				<li><span>60,00</span><span>Bolinhos de Bacalhau</span></li>
+				<li><span>60,00</span><span>Bolinhos de Camarão</span></li>
+				<li><span>25,00</span><span>Casquinha de Siri</span></li>
+				<li><span>25,00</span><span>Pescada Inteira</span></li>
+				<li><span>12,00</span><span>Espeto de Camarão</span></li>
+				<li><span>20,00</span><span>Espeto de Cação</span></li>
 			</ul>
 		</div>
 		<div id="salgados">
 			<img src="salgados.webp">
 			<h1>Salgados</h1>
 			<ul>
-				<li>Coxinha</li>
-				<li>Risoles</li>
-				<li>Empadas</li>
-				<li>Empada de Bacalhau</li>
-				<li>Empada de Palmito</li>
-				<li>Empada de Camarão</li>
-				<li>Kibe</li>
-				<li>Risoles de Queijo</li>
-				<li>Risoles de Camarão</li>
-				<li><span>8,00</span><span>Bolinho de Bacalhau</span></li>
+				<li><span>10,00</span><span>Coxinha</span></li>
+				<li><span>10,00</span><span>Kibe</span></li>
+				<li><span>10,00</span><span>Risoles de Queijo</span></li>
+				<li><span>10,00</span><span>Risoles de Camarão</span></li>
+				<li><span>10,00</span><span>Empada de Bacalhau</span></li>
+				<li><span>10,00</span><span>Empada de Palmito</span></li>
+				<li><span>10,00</span><span>Empada de Camarão</span></li>
+				<li><span>10,00</span><span>Bolinho de Bacalhau</span></li>
 			</ul>
 		</div>
 		<div id="refrescos">
 			<img src="refrescos.webp">
 			<h1>Refrescos</h1>
 			<ul>
-				<li><span>5,00</span><span>Refrigerantes</span></li>
-				<li>Coco Verde</li>
-				<li>Açaí</li>
+				<li><span>4,00</span><span>Água</span></li>
+				<li><span>5,00</span><span>Água com Gás</span></li>
+				<li><span>8,00</span><span>Gatorade</span></li>
+				<li><span>8,00</span><span>H20H!</span></li>
+				<li><span>7,00</span><span>Suco Lata</span></li>
+				<li><span>6,00</span><span>Refrigerantes</span></li>
+				<li><span>10,00</span><span>Coco Verde</span></li>
+				<li><span>15,00</span><span>Açaí</span></li>
 			</ul>
 		</div>
+		<span>* Preços podem variar. Confira o cardápio local.</span>
 	</section>
 	<section id="map_section">
 		<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1819.8272580430869!2d-46.782559129345216!3d-24.183846280019065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1598661405643!5m2!1spt-BR!2sbr" width="100%" height="100%" frameborder="0" style="border:0;"></iframe>
