--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Quiosque Ventania</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" type="text/css"href="css.css">
 </head>
 <body>
@@ -26,71 +27,73 @@
 			<h1>Cervejas</h1>
 			<ul>
 				<h2>600ml</h2>
-				<li><span>8,00</span><span>Itaipava</span></li>
-				<li><span>10,00</span><span>Petra</span></li>
-				<li><span>10,00</span><span>Amstel</span></li>
-				<li><span>10,00</span><span>Brahma</span></li>
-				<li><span>10,00</span><span>Skol</span></li>
-				<li><span>12,00</span><span>Original</span></li>
-				<li><span>15,00</span><span>Heineken</span></li>
-				<h2>Lata</h2>
-				<li><span>6,00</span><span>Skol Lata</span></li>
-				<li><span>8,00</span><span>Brahma-Zero</span></li>
-				<li><span>8,00</span><span>Malzbier</span></li>
-				<li><span>8,00</span><span>Heineken-Zero</span></li>
+				<li><span>14,00</span><span>Amstel</span></li>
+				<li><span>11,00</span><span>Brahma</span></li>
+				<li><span>12,00</span><span>Skol</span></li>
+				<li><span>11,00</span><span>Petra</span></li>
+				<li><span>14,00</span><span>Original</span></li>
+				<li><span>18,00</span><span>Heineken</span></li>
+				<li><span>18,00</span><span>Corona</span></li>
 				<h2>Outros</h2>
-				<li><span>8,00</span><span>Energético TNT</span></li>
-				<li><span>10,00</span><span>Smirnoff Ice</span></li>
+				<li><span>7,00</span><span>Skol Lata</span></li>
+				<li><span>8,00</span><span>Brahma-Zero</span></li>
+				<li><span>10,00</span><span>Heineken-Zero</span></li>
+				<li><span>10,00</span><span>Malzbier</span></li>
+				<li><span>12,00</span><span>Stella s/ gluten</span></li>
+				<li><span>12,00</span><span>Hein Long Neck</span></li>
+				<li><span>12,00</span><span>Energético TNT</span></li>
+				<li><span>17,00</span><span>Smirnoff Ice</span></li>
 			</ul>
 		</div>
 		<div id="doses">
 			<img src="doses.webp">
 			<h1>Doses</h1>
 			<ul>
-				<li><span>7,00</span><span>Velho Barreiro</span></li>
-				<li><span>8,00</span><span>Seleta</span></li>
-				<li><span>8,00</span><span>São Francisco</span></li>
-				<li><span>8,00</span><span>Cynar</span></li>
-				<li><span>8,00</span><span>Martini</span></li>
-				<li><span>8,00</span><span>Saquê</span></li>
-				<li><span>8,00</span><span>Vinho Suave</span></li>
-				<li><span>8,00</span><span>Dreher</span></li>
-				<li><span>10,00</span><span>Rum/Domecq</span></li>
-				<li><span>10,00</span><span>Smirnoff</span></li>
-				<li><span>13,00</span><span>Campari</span></li>
-				<li><span>12,00</span><span>Whisky Passport</span></li>
-				<li><span>20,00</span><span>Red Label</span></li>
-				<li><span>25,00</span><span>Tequila</span></li>
+				<li><span>7,00</span><span>Velho-Barreiro</span></li>
+				<li><span>10,00</span><span>São Fran. / Seleta</span></li>
+				<li><span>10,00</span><span>Martini</span></li>
+				<li><span>10,00</span><span>Cynar</span></li>
+				<li><span>10,00</span><span>Vinho Suave</span></li>
+				<li><span>10,00</span><span>Saquê</span></li>
 				<li><span>15,00</span><span>Gin</span></li>
+				<li><span>25,00</span><span>Tequila</span></li>
+				<li><span>10,00</span><span>Domecq</span></li>
+				<li><span>10,00</span><span>Smirnoff</span></li>
+				<li><span>15,00</span><span>Campari</span></li>
+				<li><span>12,00</span><span>Whisky Passport</span></li>
+				<li><span>20,00</span><span>Whisky Red Label</span></li>
 			</ul>
 		</div>
 		<div id="caipirinhas">
 			<img src="caipirinhas.webp">
 			<h1>Caipirinhas</h1>
 			<ul>
-				<li><span>15,00</span><span>Pinga</span></li>
-				<li><span>15,00</span><span>Vinho</span></li>
-				<li><span>20,00</span><span>Smirnoff</span></li>
-				<li><span>17,00</span><span>Saquê</span></li>
+				<li><span>20,00</span><span>Pinga</span></li>
+				<li><span>20,00</span><span>Vinho</span></li>
+				<li><span>24,00</span><span>Smirnoff</span></li>
+				<li><span>20,00</span><span>Saquê</span></li>
 				<li><span>23,00</span><span>Gin</span></li>
+				<h2>Caiçarinhas</h2>
+				<li><span>22,00</span><span>Pinga</span></li>
+				<li><span>25,00</span><span>Smirnoff</span></li>
 			</ul>
 		</div>
 		<div id="batidas">
 			<img src="batidas.webp">
 			<h1>Batidas</h1>
 			<ul>
-				<li><span>16,00</span><span>Espanhola</span></li>
-				<li><span>16,00</span><span>Pinga</span></li>
-				<li><span>21,00</span><span>Smirnoff</span></li>
-				<li><span>18,00</span><span>Saquê</span></li>
+				<li><span>22,00</span><span>Pinga</span></li>
+				<li><span>20,00</span><span>Espanhola</span></li>
+				<li><span>27,00</span><span>Smirnoff</span></li>
+				<li><span>22,00</span><span>Saquê</span></li>
 			</ul>
 		</div>
 		<div id="sucos">
 			<img src="sucos.webp">
 			<h1>Sucos</h1>
 			<ul>
-				<li><span>10,00</span><span>Com Água</span></li>
-				<li><span>12,00</span><span>Com Leite</span></li>
+				<li><span>12,00</span><span>Com Água</span></li>
+				<li><span>15,00</span><span>Com Leite</span></li>
 				<div>
 					<h3>Sabores</h3>
 					<ul>
@@ -111,69 +114,69 @@
 			<img src="porcoes.webp">
 			<h1>Porções</h1>
 			<ul>
-				<li><span>80,00</span><span>Carne Seca/Mandioca</span></li>
-				<li><span>45,00</span><span>Calabresa Acebolada</span></li>
-				<li><span>50,00</span><span>Frango à Passarinho</span></li>
-				<li><span>35,00</span><span>Batata Frita</span></li>
-				<li><span>35,00</span><span>Polenta Frita</span></li>
-				<li><span>35,00</span><span>Mandioca Frita</span></li>
-				<li><span>35,00</span><span>Mandioca Cremosa</span></li>
-				<li><span>40,00</span><span>Cebola Empanada</span></li>
-				<li><span>40,00</span><span>Salame</span></li>
-				<li><span>40,00</span><span>Palmito com Azeitonas</span></li>
-				<li><span>50,00</span><span>Bolinhos de Provolone</span></li>
+				<li><span>100,00</span><span>Carne Seca/Mandioca</span></li>
+				<li><span>60,00</span><span>Calabresa Acebolada</span></li>
+				<li><span>60,00</span><span>Frango à Passarinho</span></li>
+				<li><span>50,00</span><span>Batata Frita</span></li>
+				<li><span>50,00</span><span>Polenta Frita</span></li>
+				<li><span>50,00</span><span>Mandioca Frita</span></li>
+				<li><span>50,00</span><span>Mandioca Cremosa</span></li>
+				<li><span>50,00</span><span>Cebola Empanada</span></li>
+				<li><span>50,00</span><span>Salame</span></li>
+				<li><span>50,00</span><span>Palmito com Azeitonas</span></li>
+				<li><span>60,00</span><span>Bolinhos de Provolone</span></li>
 				<h2>Frutos do Mar</h2>
-				<li><span>60,00</span><span>Camarão</span></li>
-				<li><span>90,00</span><span>Camarão Branco</span></li>
-				<li><span>70,00</span><span>Lula</span></li>
-				<li><span>70,00</span><span>Porquinho</span></li>
-				<li><span>70,00</span><span>Cação</span></li>
-				<li><span>70,00</span><span>Isca</span></li>
-				<li><span>70,00</span><span>Marisco ao Vinagrete</span></li>
-				<li><span>60,00</span><span>Manjuba</span></li>
-				<li><span>50,00</span><span>Caranguejo na Cerveja</span></li>
+				<li><span>90,00</span><span>Peixe Porquinho</span></li>
+				<li><span>90,00</span><span>Cação</span></li>
+				<li><span>100,00</span><span>Lula em anéis</span></li>
+				<li><span>90,00</span><span>Isca Filé Linguado</span></li>
+				<li><span>80,00</span><span>Camarão 7 Barbas</span></li>
+				<li><span>120,00</span><span>Camarão Branco G</span></li>
+				<li><span>90,00</span><span>Marisco ao Vinagrete</span></li>
+				<li><span>80,00</span><span>Manjuba Inteira</span></li>
+				<li><span>60,00</span><span>Caranguejo na Cerveja (3 un)</span></li>
 			</ul>
 		</div>
 		<div id="petiscos">
 			<img src="petiscos.webp">
 			<h1>Petiscos</h1>
 			<ul>
-				<li><span>60,00</span><span>Mini Kibe</span></li>
-				<li><span>60,00</span><span>Bolinhos de Carne Seca</span></li>
-				<li><span>60,00</span><span>Bolinhos de Bacalhau</span></li>
-				<li><span>60,00</span><span>Bolinhos de Camarão</span></li>
-				<li><span>25,00</span><span>Casquinha de Siri</span></li>
-				<li><span>25,00</span><span>Pescada Inteira</span></li>
-				<li><span>12,00</span><span>Espeto de Camarão</span></li>
-				<li><span>20,00</span><span>Espeto de Cação</span></li>
+				<li><span>70,00</span><span>Bolinhos de Carne Seca (12 un)</span></li>
+				<li><span>70,00</span><span>Bolinhos de Bacalhau (12 un)</span></li>
+				<li><span>70,00</span><span>Bolinhos de Camarão (12 un)</span></li>
+				<li><span>30,00</span><span>Casquinha de Siri</span></li>
+				<li><span>30,00</span><span>Pescada Inteira</span></li>
+				<li><span>15,00</span><span>Espeto de Camarão</span></li>
+				<li><span>25,00</span><span>Espeto de Cação</span></li>
 			</ul>
 		</div>
 		<div id="salgados">
 			<img src="salgados.webp">
 			<h1>Salgados</h1>
 			<ul>
-				<li><span>10,00</span><span>Coxinha</span></li>
-				<li><span>10,00</span><span>Kibe</span></li>
-				<li><span>10,00</span><span>Risoles de Queijo</span></li>
-				<li><span>10,00</span><span>Risoles de Camarão</span></li>
-				<li><span>10,00</span><span>Empada de Bacalhau</span></li>
-				<li><span>10,00</span><span>Empada de Palmito</span></li>
-				<li><span>10,00</span><span>Empada de Camarão</span></li>
-				<li><span>10,00</span><span>Bolinho de Bacalhau</span></li>
+				<li><span>12,00</span><span>Coxinha</span></li>
+				<li><span>12,00</span><span>Kibe</span></li>
+				<li><span>12,00</span><span>Risoles de Queijo</span></li>
+				<li><span>12,00</span><span>Risoles de Camarão</span></li>
+				<li><span>12,00</span><span>Empada de Bacalhau</span></li>
+				<li><span>12,00</span><span>Empada de Palmito</span></li>
+				<li><span>12,00</span><span>Empada de Camarão</span></li>
+				<li><span>12,00</span><span>Bolinho de Bacalhau</span></li>
+				<li><span>12,00</span><span>Bolinho de Carne</span></li>
 			</ul>
 		</div>
 		<div id="refrescos">
 			<img src="refrescos.webp">
 			<h1>Refrescos</h1>
 			<ul>
-				<li><span>4,00</span><span>Água</span></li>
-				<li><span>5,00</span><span>Água com Gás</span></li>
-				<li><span>8,00</span><span>Gatorade</span></li>
-				<li><span>8,00</span><span>H20H!</span></li>
-				<li><span>7,00</span><span>Suco Lata</span></li>
-				<li><span>6,00</span><span>Refrigerantes</span></li>
-				<li><span>10,00</span><span>Coco Verde</span></li>
-				<li><span>15,00</span><span>Açaí</span></li>
+				<li><span>5,00</span><span>Água</span></li>
+				<li><span>6,00</span><span>Água com Gás</span></li>
+				<li><span>10,00</span><span>Gatorade</span></li>
+				<li><span>10,00</span><span>H20H!</span></li>
+				<li><span>8,00</span><span>Suco Lata</span></li>
+				<li><span>7,00</span><span>Refrigerantes</span></li>
+				<li><span>12,00</span><span>Coco Verde</span></li>
+				<li><span>16,00</span><span>Açaí (200ml)</span></li>
 			</ul>
 		</div>
 		<span>* Preços podem variar. Confira o cardápio local.</span>
